# NetGUI

./: #UI.glade#  .buildconfig  .gitignore  CHANGELOG  MANIFEST.in  NetGUI.cmb  NetGUI.license  README.md  UI.glade  UpdateVersions.py  dialog.glade  get_pw.py  index.html  main-new.py  main-old.py  main.py  main.py.orig  netgui.py  open_website.py  params.json  profileEditor.py  pyproject.toml  setup.py  test  test2
scripts/: PKGBUILD  UpdateVersions.py  netgui  netgui-0.5-3-any.pkg.tar.xz  netgui.desktop
scripts/NetGUI/: config  packed-refs
scripts/NetGUI/objects/pack/: pack-e918fe4dd1db1c751e6fad39b3bd1b83eaec999f.idx  pack-e918fe4dd1db1c751e6fad39b3bd1b83eaec999f.pack
scripts/pkg/netgui/: .MTREE  .PKGINFO
